work happened